--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,27 +1,27 @@
 {
-    "short_name": "Stresser_e_Machado",
-    "name": "Stresser & Machado",
+    "short_name": "Santana_Lima",
+    "name": "Santana Lima | Advocacia & Consultoria",
     "icons": [
         {
-            "src": "/brand_imgs/Icone_128.png",
+            "src": "/brand_imgs/Icone_SL_128.png",
             "sizes": "128x128",
             "type": "image/png"
         },
         {
-            "src": "/brand_imgs/Icone_256.png",
+            "src": "/brand_imgs/Icone_SL_256.png",
             "sizes": "256x256",
             "type": "image/png"
         },
         {
-            "src": "/brand_imgs/Icone_512.png",
+            "src": "/brand_imgs/Icone_SL_512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
         }
     ],
     "start_url": "/",
-    "background_color": "#714b2c",
+    "background_color": "#3b1714",
     "display": "standalone",
     "scope": "/",
-    "theme_color": "#714b2c"
+    "theme_color": "#3b1714"
 }
